Fixed IncomingFeed Visibility Issue

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/participant-waiting-room.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participant-waiting-room/participant-waiting-room.component.scss
@@ -82,3 +82,12 @@
 .showVideo {
   opacity: 1;
 }
+
+
+.hideIncomingFeed {
+  display: none;
+}
+
+.showIncomingFeed {
+  display: block;
+}
